--- a/src/scitrader.marketdataserver/build.gradle
+++ b/src/scitrader.marketdataserver/build.gradle
@@ -22,4 +22,12 @@ dependencies {
 
     // Java-Websocket https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket
     compile group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.3.9'
+    
+    // Jsoniter
+    // https://mvnrepository.com/artifact/com.jsoniter/jsoniter
+    compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
+    
+    // JodaTime
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
 }
