Simple mongo recording of ticks for ETHUSD, XBTUSD

--- a/src/scitrader.marketdataserver/build.gradle
+++ b/src/scitrader.marketdataserver/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     // JodaTime
     // https://mvnrepository.com/artifact/joda-time/joda-time
     compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
+
+    // MongoDB
+    // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.9.1'
 }
