--- a/src/scitrader.marketdataserver/build.gradle
+++ b/src/scitrader.marketdataserver/build.gradle
@@ -34,4 +34,12 @@ dependencies {
     // MongoDB
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.9.1'
+    
+    // Spark, REST Api www.sparkjava.com
+    // https://mvnrepository.com/artifact/com.sparkjava/spark-core
+    compile group: 'com.sparkjava', name: 'spark-core', version: '2.8.0'
+
+    // Sl4j used by Spark
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 }
