--- a/Kotlin/hello-kotlin-world/build.gradle
+++ b/Kotlin/hello-kotlin-world/build.gradle
@@ -30,9 +30,35 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
+    // Google Guice https://mvnrepository.com/artifact/com.google.inject/guice
+    compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
+
     // Log4J
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+
+    // Java-Websocket https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket
+    compile group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.3.9'
+
+    // Jsoniter
+    // https://mvnrepository.com/artifact/com.jsoniter/jsoniter
+    compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
+
+    // JodaTime
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
+
+    // MongoDB
+    // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.9.1'
+
+    // Spark, REST Api www.sparkjava.com
+    // https://mvnrepository.com/artifact/com.sparkjava/spark-core
+    compile group: 'com.sparkjava', name: 'spark-core', version: '2.8.0'
+
+    // Sl4j used by Spark
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 }
 
 compileKotlin {
