Slightly less magic but functional serialization of PriceBar JSON

--- a/Kotlin/hello-kotlin-world/build.gradle
+++ b/Kotlin/hello-kotlin-world/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     // Sl4j used by Spark
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
+    // https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20180813'
 }
 
 compileKotlin {
